<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true"
    android:windowSoftInputMode="adjustPan|adjustResize"
    tools:context="dev.teerayut.demo.authentication.AuthenticationActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding_margin_large"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tsr_logo"/>

            </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp">

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person_white_48dp"
                android:hint="@string/username"
                android:drawableTint="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:imeOptions="actionNext"
                android:inputType="text|textNoSuggestions|textCapCharacters"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp">

            <EditText
                android:id="@+id/userPwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:singleLine="true"
                android:drawableLeft="@drawable/ic_lock_white_48dp"
                android:hint="@string/password"
                android:drawableTint="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="textPassword"
                android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/forgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="right"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sign_in"
            android:textSize="20sp"
            android:textColor="@color/White"
            android:backgroundTint="@color/colorPrimaryDark"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1.2"
                android:layout_alignParentBottom="true"
                android:src="@drawable/bottom_banner"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.6"
                android:layout_alignParentBottom="true"
                android:src="@drawable/delivery"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
